glibc (2.21-0experimental1) UNRELEASED; urgency=medium

  * patches/hurd-i386/cvs-libpthread.diff: Update from upstream.
  * patches/hurd-i386/cvs-libpthread-dlopen.diff: Merged.
  * patches/hurd-i386/cvs-libpthread-libc-lockP2.diff: Merged.
  * patches/hurd-i386/cvs-bind_umask.diff: Merged.
  * patches/hurd-i386/cvs-fork_ss_hang.diff: Merged.
  * patches/hurd-i386/cvs-munmap-0.diff: Merged.
  * patches/hurd-i386/cvs-static-dlopen.diff: Merged.
  * patches/hurd-i386/cvs-tcbhead_t.diff: Merged.
  * patches/hurd-i386/cvs-libpthread_versions.diff: Rebased.
  * patches/hurd-i386/local-disable-tst-xmmymm.diff: Dropped.
  * patches/hurd-i386/local-hurdsig-global-dispositions-version.diff: Rebased.
  * patches/hurd-i386/submitted-exec_filename.diff: Rebased.
  * patches/hurd-i386/submitted-net.diff: Rebased.
  * patches/hurd-i386/tg-EIEIO-fr.diff: Rebased.
  * patches/hurd-i386/tg-af_local_strlen.diff: Rebased.
  * patches/hurd-i386/tg-chflags.diff: Rebased.
  * patches/hurd-i386/tg-tls-threadvar.diff: Update.
  * patches/hurd-i386/tg-tls.diff: Rebased.
  * patches/hurd-i386/tg-tls_thread_leak.diff: Rebased.
  * patches/hurd-i386/unsubmitted-NO_HIDDEN.diff: Rebased.
  * patches/hurd-i386/tg-no-hp-timing.diff: Update.
  * patches/series: Re-enable all hurd patches.
  * patches/hurd-i386/libpthread-versions.diff: New patch, updates to new
    version engine.
  * patches/hurd-i386/cvs-revert-gnu-gnu-cleanup.diff: New patch, reverts
    cleanup of the gnu-gnu hack.
  * patches/hurd-i386/libpthread_pthread_types.diff: New patch, fixes
    inclusion of pthread_types.h
  * patches/hurd-i386/unsubmitted-libc_alloca_cutoff.diff: New patch,
    implements alloca cutoff limit.
  * patches/hurd-i386/cvs-unwind-resume.diff: New patch, fixes unwind-resume
    build.
  * patches/hurd-i386/unsubmitted-libpthread-semaphore.h.diff: New patch,
    fixes semaphore header inclusion.
  * patches/hurd-i386/unsubmitted-timer_routines.diff: New patch, fixes
    timer_routines build.