@@ -3,6 +3,8 @@ libc = libc0.3
 
 # Build and expect pt_chown on this platform
 pt_chown = yes
+# Expect pldd on this platform
+pldd = no
 
 # Linuxthreads Config (we claim "no threads" as nptl keys off this)
 threads = no
