@@ -4,6 +4,8 @@ libc = libc0.1
 
 # Build and expect pt_chown on this platform
 pt_chown = yes
+# Expect pldd on this platform
+pldd = no
 
 # NPTL Config
 threads = yes
