@@ -1,5 +1,6 @@
 glibc (2.21-0experimental1) UNRELEASED; urgency=medium
 
+  [ Samuel Thibault ]
   * patches/hurd-i386/cvs-libpthread.diff: Update from upstream.
   * patches/hurd-i386/cvs-libpthread-dlopen.diff: Merged.
   * patches/hurd-i386/cvs-libpthread-libc-lockP2.diff: Merged.
@@ -41,6 +42,11 @@ glibc (2.21-0experimental1) UNRELEASED; urgency=medium
   * patches/hurd-i386/cvs-warnings.diff: New patch, fixes warnings.
   * patches/hurd-i386/cvs-libpthread-warnings.diff: New patch, fixes warnings.
   * sysdeps/hurd.mk: Disable -Werror since MIG currently generates warnings.
+
+  [ Adam Conrad ]
+  * debian/{rules.d/debhelper.mk,sysdeps/*}: Define per-platform pldd
+    variable to control installation of usr/bin/pldd in libc-bin, and
+    leverage the same trick to decide to install usr/lib/pt_chown too.
 
  -- Samuel Thibault <sthibault@debian.org>  Fri, 20 Mar 2015 12:30:54 +0000
 
